tests/NormalTests/paczka1/fuzzy1/65702674.err
Error in line 12: E6OBrh5u A89 49,9
Error in line 3: t39YvQC00k S527 18,0
Error in line 18: A663 A663 72,8
Error in line 20: A663 S527 49,9
Error in line 23: A663 S443 -1,9
Error in line 22: h6RFGdIRXXY A89 9,9
Error in line 24: h6RFGdIRXXY A663 37,5
Error in line 27: U2RS S443 68,5
Error in line 28: E6OBrh5u A663 14,5
